// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not include ids, pseudo selectors, or attributes 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassNames = \\"mt-1\\" | \\"mt-2\\""
`;

exports[`generates types for classes 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassNames = \\"mt-1\\" | \\"mt-2\\""
`;

exports[`groups 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassNames = \\"group\\" | \\"group-hover:text-gray-900\\""
`;

exports[`supports custom directories 1`] = `
"// THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
type ClassNames = \\"mt-1\\" | \\"mt-2\\""
`;
